# C-portable-types

./: .gitignore  README.md  scheme.graphml
lib/c-test-macroses/src/: Doxyfile  atest.h  test.h
lib/c-test-macroses/test/: CMakeLists.txt  main.c
lib/floating-point-serialization/src/: Doxyfile  floating-point-serialization.c  floating-point-serialization.h
lib/floating-point-serialization/src/internal-definitions/: floating-point-serialization.h
lib/floating-point-serialization/test/: CMakeLists.txt  main.c
lib/integer-serialization/src/: Doxyfile  integer-serialization.c  integer-serialization.h
lib/integer-serialization/test/: CMakeLists.txt  main.c
lib/internal/advanced-sr-lib-flow-control/src/: Doxyfile  advanced-sr-lib-flow-control.c  advanced-sr-lib-flow-control.h
lib/internal/advanced-sr-lib-flow-control/src/internal/: advanced-sr-lib-flow-control.h
lib/internal/advanced-sr-lib-flow-control/test/: CMakeLists.txt  main.c
lib/internal/blob-serialization/src/: Doxyfile  blob-serialization.c  blob-serialization.h
lib/internal/blob-serialization/test/: CMakeLists.txt  main.c
lib/internal/floating-point-serialization/src/: Doxyfile
lib/internal/floating-point-serialization/test/: CMakeLists.txt
lib/internal/integer-serialization/src/: Doxyfile
lib/internal/integer-serialization/test/: CMakeLists.txt
lib/internal/sr-lib-flow-control/src/: flow-control.h
lib/internal/sr-lib-flow-control/test/: CMakeLists.txt  main.c
lib/public/to-stream-serializer/src/: Doxyfile  to-stream-serializer.c  to-stream-serializer.h
lib/public/to-stream-serializer/src/internal-definitions/: to-stream-serializer.h
lib/public/to-stream-serializer/test/: CMakeLists.txt  main.c
lib/sr-lib/: flow_control.c  flow_control.h  test.h
lib/sr-lib-flow-control/src/: Doxyfile  flow-control.c  flow-control.h
lib/sr-lib-flow-control/test/: CMakeLists.txt
lib/sr-lib/src/: flow-control.c  test.h
lib/sr-lib/test/: CMakeLists.txt  main  main.c
